cplexx.h

  typedef int (CPXPUBLIC CPXL_CALLBACK) (CPXL_CALLBACK_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_PROF) (CPXL_CALLBACK_PROF_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_BRANCH) (CPXL_CALLBACK_BRANCH_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_NODE) (CPXL_CALLBACK_NODE_ARGS);
  typedef int (CPXPUBLIC
               CPXL_CALLBACK_HEURISTIC) (CPXL_CALLBACK_HEURISTIC_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_SOLVE) (CPXL_CALLBACK_SOLVE_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_CUT) (CPXL_CALLBACK_CUT_ARGS);
  typedef int (CPXPUBLIC
               CPXL_CALLBACK_INCUMBENT) (CPXL_CALLBACK_INCUMBENT_ARGS);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLcopylpwnames (CPXCENVptr env, CPXLPptr lp, CPXINT numcols,
                      CPXINT numrows, int objsense,
                      double const *objective, double const *rhs,
                      char const *sense, CPXLONG const *matbeg,
                      CPXINT const *matcnt, CPXINT const *matind,
                      double const *matval, double const *lb,
                      double const *ub, double const *rngval,
                      char const *const *colname, char const *const *rowname);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLgetobjval (CPXCENVptr env, CPXCLPptr lp, double *objval_p);
    CPXLIBAPI int CPXPUBLIC CPXLgetprobtype (CPXCENVptr env, CPXCLPptr lp);
    CPXLIBAPI int CPXPUBLIC CPXLgetstat (CPXCENVptr env, CPXCLPptr lp);
    CPXLIBAPI
    CPXCHARptr CPXPUBLIC
    CPXLgetstatstring (CPXCENVptr env, int statind, char *buffer_str);
    CPXLIBAPI int CPXPUBLIC CPXLgettime (CPXCENVptr env, double *timestamp_p);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLgetx (CPXCENVptr env, CPXCLPptr lp, double *x, CPXINT begin,
              CPXINT end);
    CPXLIBAPI int CPXPUBLIC CPXLlpopt (CPXCENVptr env, CPXLPptr lp);
    CPXLIBAPI
    int CPXPUBLIC CPXLpresolve (CPXCENVptr env, CPXLPptr lp, int method);
    CPXLIBAPI int CPXPUBLIC CPXLprimopt (CPXCENVptr env, CPXLPptr lp);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLsolninfo (CPXCENVptr env, CPXCLPptr lp, int *solnmethod_p,
                  int *solntype_p, int *pfeasind_p, int *dfeasind_p);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLsolution (CPXCENVptr env, CPXCLPptr lp, int *lpstat_p,
                  double *objval_p, double *x, double *pi,
                  double *slack, double *dj);
    CPXLIBAPI
    int CPXPUBLIC CPXLwriteparam (CPXCENVptr env, char const *filename_str);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLwriteprob (CPXCENVptr env, CPXCLPptr lp,
                   char const *filename_str, char const *filetype_str);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLcopyctype (CPXCENVptr env, CPXLPptr lp, char const *xctype);
    CPXLIBAPI int CPXPUBLIC CPXLmipopt (CPXCENVptr env, CPXLPptr lp);