src/cplex_sys.rs


    pub fn CPXLcopylpwnames(env: *const CPXenv,
                            lp: *mut CPXlp,
                            numcols: CPXDIM,
                            numrows: CPXDIM,
                            objsense: c_int,
                            objective: *const c_double,
                            rhs: *const c_double,
                            sense: *const c_char,
                            matbeg: *const CPXNNZ,
                            matcnt: *const CPXDIM,
                            matind: *const CPXDIM,
                            matval: *const c_double,
                            lb: *const c_double,
                            ub: *const c_double,
                            rngval: *const c_double,
                            colname: *const *const c_char,
                            rowname: *const *const c_char)
                            -> c_int;

    pub fn CPXLcopyctype(env: *const CPXenv, lp: *mut CPXlp, ctype: *const c_char) -> c_int;

    pub fn CPXLpresolve(env: *const CPXenv, lp: *mut CPXlp, method: c_int) -> c_int;

    pub fn CPXLgetprobtype(env: *const CPXenv, lp: *mut CPXlp) -> c_int;

    pub fn CPXLmipopt(env: *const CPXenv, lp: *mut CPXlp) -> c_int;

    pub fn CPXLlpopt(env: *const CPXenv, lp: *mut CPXlp) -> c_int;

    pub fn CPXLprimopt(env: *const CPXenv, lp: *mut CPXlp) -> c_int;

    pub fn CPXLgetstat(env: *const CPXenv, lp: *const CPXlp) -> c_int;

    pub fn CPXLgetstatstring(env: *const CPXenv,
                             status: c_int,
                             message: *mut c_char)
                             -> *const c_char;

    pub fn CPXLgetobjval(env: *const CPXenv, lp: *mut CPXlp, objval: *mut c_double) -> c_int;

    pub fn CPXLgetx(env: *const CPXenv,
                    lp: *const CPXlp,
                    x: *mut c_double,
                    begin: CPXDIM,
                    end: CPXDIM)
                    -> c_int;

    pub fn CPXLsolution(env: *const CPXenv,
                        lp: *const CPXlp,
                        lpstat: *mut c_int,
                        objval: *mut c_double,
                        x: *mut c_double,
                        pi: *mut c_double,
                        slack: *mut c_double,
                        dj: *mut c_double)
                        -> c_int;

    pub fn CPXLsolninfo(env: *const CPXenv,
                        lp: *mut CPXlp,
                        solnmethod: *mut c_int,
                        solntype: *mut c_int,
                        pfeasind: *mut c_int,
                        dfeasind: *mut c_int)
                        -> c_int;

    pub fn CPXLgettime(env: *const CPXenv, timestamp: *mut c_double) -> c_int;

    pub fn CPXLwriteparam(env: *const CPXenv, filename: *const c_char) -> c_int;

    pub fn CPXLwriteprob(env: *const CPXenv,
                         lp: *const CPXlp,
                         filename: *const c_char,
                         filetype: *const c_char)
                         -> c_int;
}
